@@ -1,6 +1,13 @@
 History
 -------
 
+0.x.x. (TBD)
+------------
+
+Added
+
+* ``harmonic_mean()``
+
 0.2.0 (2016-08-27)
 -----------
 
