@@ -1,5 +1,13 @@
 # simplestatistics changelog
 
+## 0.x.x
+
+TBD
+
+### Added
+
+- `harmonic_mean()`
+
 ## 0.2.0
 
 2016-08-27
